@@ -2,3 +2,4 @@ pyopenssl
 pandas
 pyttsx3
 pycrypto
+pyreadline
