@@ -14,6 +14,8 @@ Add a configurable jitter to all implants
 Update the notifications config if it is changed in the Config.py
 Add NotificationsProjectName in Config.py which is displayed in notifications message
 Add fpc script which searches the Posh DB for a particular command
+Use pyreadline for Windows compatibility
+Modify InjectShellcode logged command to remove base64 encoded shellcode and instead just log loaded filename
 
 4.8 (13/02/19)
 ==============
